feat: implement user tasks forms for the example process. fix #56
