# examples/process-forms/src/app/tasks/amend-request/amend-task.component.ts
@@ -1,9 +1,11 @@
 import { Component } from '@angular/core';
-import { ActivatedRoute } from '@angular/router';
+import { ActivatedRoute, Router } from '@angular/router';
 import { ApprovalRequest } from 'process/model/approvalRequest';
 import { AmendRequestService } from 'process/api/amendRequest.service';
 import { Task } from 'process/model/task';
 import { TaskAmendRequestSubmitData } from 'process/model/taskAmendRequestSubmitData';
+import { EnvironmentHelperService } from 'app/services/environment.helper.service';
+import { Environment } from 'process/model/environment';
 
 @Component({
   selector: 'app-task-amend',
@@ -13,6 +15,7 @@ import { TaskAmendRequestSubmitData } from 'process/model/taskAmendRequestSubmit
 export class AmendTaskComponent {
 
   task: Task = this.emptyTask();
+  environment: Environment = this.envProvider.none();
   comment = '';
   submitData: TaskAmendRequestSubmitData = {
     action: '',
@@ -21,6 +24,8 @@ export class AmendTaskComponent {
 
   constructor(
     private client: AmendRequestService,
+    private envProvider: EnvironmentHelperService,
+    private router: Router,
     route: ActivatedRoute
   ) {
     const taskId: string = route.snapshot.paramMap.get('taskId');
@@ -33,6 +38,7 @@ export class AmendTaskComponent {
         console.log('Error loading amend request task with id', taskId);
       }
     );
+    this.envProvider.env().subscribe(e => this.environment = e);
   }
 
   complete() {
@@ -40,6 +46,9 @@ export class AmendTaskComponent {
     this.client.submitTaskAmendRequestSubmitData(this.task.id, this.submitData).subscribe(
       result => {
         console.log('Sucessfully submitted');
+        this.router.navigate(['/externalRedirect', { externalUrl: this.environment.tasklistUrl }], {
+          skipLocationChange: true,
+        });
       }, error => {
         console.log('Error submitting amend request task with id', this.task.id);
       }
