# examples/process-forms/src/app/tasks/approve-request/approve-task.component.ts
@@ -1,9 +1,11 @@
 import { Component } from '@angular/core';
-import { ActivatedRoute } from '@angular/router';
+import { ActivatedRoute, Router } from '@angular/router';
 import { ApprovalRequest } from 'process/model/approvalRequest';
 import { ApproveRequestService } from 'process/api/approveRequest.service';
 import { Task } from 'process/model/task';
 import { TaskApproveRequestSubmitData } from 'process/model/taskApproveRequestSubmitData';
+import { EnvironmentHelperService } from 'app/services/environment.helper.service';
+import { Environment } from 'process/model/environment';
 
 @Component({
   selector: 'app-task-approve',
@@ -13,6 +15,7 @@ import { TaskApproveRequestSubmitData } from 'process/model/taskApproveRequestSu
 export class ApproveTaskComponent {
 
   task: Task = this.emptyTask();
+  environment: Environment;
   approvalRequest: ApprovalRequest = this.emptyApprovalRequest();
   submitData: TaskApproveRequestSubmitData = {
     decision: ''
@@ -20,9 +23,12 @@ export class ApproveTaskComponent {
 
   constructor(
     private client: ApproveRequestService,
-    route: ActivatedRoute
+    route: ActivatedRoute,
+    private router: Router,
+    private envProvider: EnvironmentHelperService
   ) {
     const taskId: string = route.snapshot.paramMap.get('taskId');
+
     this.client.loadTaskApproveRequestFormData(taskId).subscribe(
       formData => {
         this.task = formData.task;
@@ -31,6 +37,10 @@ export class ApproveTaskComponent {
         console.log('Error loading approve request task with id', taskId);
       }
     );
+    this.envProvider.env().subscribe(e => {
+      this.environment = e;
+      console.log(this.environment);
+    });
   }
 
   complete() {
@@ -38,10 +48,17 @@ export class ApproveTaskComponent {
     this.client.submitTaskApproveRequestSubmitData(this.task.id, this.submitData).subscribe(
       result => {
         console.log('Sucessfully submitted');
+        this.router.navigate(['/externalRedirect', { externalUrl: this.environment.tasklistUrl }], {
+          skipLocationChange: true,
+        });
       }, error => {
         console.log('Error submitting approve request task with id', this.task.id);
       }
     );
+  }
+
+  cancel() {
+    window.close();
   }
 
   emptyTask(): Task {
